The Status page now fetches the database version and displays it in the summary at the top of the page

--- a/Main/Source/Shared/BBC.Dna.Common/BBC.Dna.Common.csproj
+++ b/Main/Source/Shared/BBC.Dna.Common/BBC.Dna.Common.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CachableBase.cs" />
+    <Compile Include="DatabaseVersion.cs" />
     <Compile Include="Date.cs" />
     <Compile Include="ISignalBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
