Create SMTP Configuration

--- a/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/App.config
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/App.config
@@ -113,7 +113,7 @@
     </loggingConfiguration>
     <connectionStrings>
         <add name="DnaEventProcessorService.Properties.Settings.ConnectionString_TheGuide"
-            connectionString="database=theguide; server=.; user id=sa; password=sapassword; pooling=false"
+            connectionString="Data Source=.;Initial Catalog=DNADb;Integrated Security=True;Pooling=False"
             providerName="System.Data.SqlClient" />
         <add name="DnaEventProcessorService.Properties.Settings.ConnectionString_RiskMod"
             connectionString="Data Source=.;Initial Catalog=RiskMod;Integrated Security=True;Application Name=DnaEventProcessorService" />
@@ -167,7 +167,7 @@
                 <value>32</value>
             </setting>
             <setting name="DatabaseEmailProcessor_Interval" serializeAs="String">
-                <value>20000</value>
+                <value>2000</value>
             </setting>
             <setting name="DatabaseEmaiProcessor_NumThreads" serializeAs="String">
                 <value>1</value>
@@ -185,13 +185,22 @@
             <setting name="DatabaseEmailsOn" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="DatabaseEmailProcessor_SMTPSettings" serializeAs="String">
+            <setting name="DatabaseEmailProcessor_SMTPHostname" serializeAs="String">
                 <value>ops-fs0.national.core.bbc.co.uk</value>
             </setting>
-            <setting name="DatabaseEmailProcessor_PersistentErrorMessageSnippet"
-                serializeAs="String">
-                <value>service not available#remote name could not be resolved#Unable to connect to the remote server</value>
+            <setting name="DatabaseEmailProcessor_SMTPSslEnable" serializeAs="String">
+                <value>False</value>
             </setting>
+            <setting name="DatabaseEmailProcessor_SMTPUsername" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="DatabaseEmailProcessor_SMTPPassword" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="DatabaseEmailProcessor_PersistentErrorMessageSnippet"
+              serializeAs="String">
+               <value>service not available#remote name could not be resolved#Unable to connect to the remote server#Unable to Parse Server Reason</value>
+            </setting>          
         </DnaEventProcessorService.Properties.Settings>
         <!--<SNeSEventProcessor.Properties.Settings>
       <setting name="activityProcessingPeriod" serializeAs="String">
