--- a/Main/Source/AgentBlocker/agentblocker.vcproj
+++ b/Main/Source/AgentBlocker/agentblocker.vcproj
@@ -5,6 +5,10 @@
 	Name="agentblocker"
 	ProjectGUID="{383658FB-A707-4703-A8EA-BAB45B9A9352}"
 	RootNamespace="agentblocker"
+	SccProjectName="SAK"
+	SccAuxPath="SAK"
+	SccLocalPath="SAK"
+	SccProvider="SAK"
 	Keyword="MFCProj"
 	TargetFrameworkVersion="0"
 	>
