[JIRA] (MON-3308) Moving Moderated Comments (DNA) from Atos to Azure

--- a/Main/Source/DNA Monitoring/BBC.DNA.Monitoring/BBC.DNA.Monitoring/BBC.DNA.Monitoring.csproj
+++ b/Main/Source/DNA Monitoring/BBC.DNA.Monitoring/BBC.DNA.Monitoring/BBC.DNA.Monitoring.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DNAMonitoringOnAzure.cs" />
     <Compile Include="DNAMonitoring.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="KPI.cs" />
