--- a/Release/Source/Windows Services/DnaEventsService/DnaEventProcessorService/Properties/Settings.settings
+++ b/Release/Source/Windows Services/DnaEventsService/DnaEventProcessorService/Properties/Settings.settings
@@ -11,10 +11,10 @@
     <Setting Name="ConnectionString_TheGuide" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;database=theguide; server=.; user id=sa; password=sapassword; pooling=false&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=.;Initial Catalog=DNADb;Integrated Security=True;Pooling=False&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">database=theguide; server=.; user id=sa; password=sapassword; pooling=false</Value>
+      <Value Profile="(Default)">Data Source=.;Initial Catalog=DNADb;Integrated Security=True;Pooling=False</Value>
     </Setting>
     <Setting Name="snesBaseUri" Type="(Web Service URL)" Scope="Application">
       <Value Profile="(Default)">http://localhost</Value>
@@ -54,7 +54,7 @@
       <Value Profile="(Default)">32</Value>
     </Setting>
     <Setting Name="DatabaseEmailProcessor_Interval" Type="System.Int32" Scope="Application">
-      <Value Profile="(Default)">20000</Value>
+      <Value Profile="(Default)">2000</Value>
     </Setting>
     <Setting Name="DatabaseEmaiProcessor_NumThreads" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">1</Value>
@@ -71,11 +71,20 @@
     <Setting Name="DatabaseEmailsOn" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="DatabaseEmailProcessor_SMTPSettings" Type="System.String" Scope="Application">
+    <Setting Name="DatabaseEmailProcessor_SMTPHostname" Type="System.String" Scope="Application">
       <Value Profile="(Default)">ops-fs0.national.core.bbc.co.uk</Value>
     </Setting>
     <Setting Name="DatabaseEmailProcessor_PersistentErrorMessageSnippet" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">service not available#remote name could not be resolved#Unable to connect to the remote server</Value>
+      <Value Profile="(Default)">service not available#remote name could not be resolved#Unable to connect to the remote server#Unable to Parse Server Reason</Value>
+    </Setting>
+    <Setting Name="DatabaseEmailProcessor_SMTPSslEnable" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="DatabaseEmailProcessor_SMTPUsername" Type="System.String" Scope="Application">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="DatabaseEmailProcessor_SMTPPassword" Type="System.String" Scope="Application">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
