https://jira.dev.bbc.co.uk/browse/MYMODCOMM-895 Checking in code for the new Comment Forum Activity API

--- a/Main/Source/Shared/BBC.Dna.Api.Tests/BBC.Dna.Api.Tests.csproj
+++ b/Main/Source/Shared/BBC.Dna.Api.Tests/BBC.Dna.Api.Tests.csproj
@@ -73,6 +73,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommentForumActivityTests.cs" />
     <Compile Include="CommentInfoTest.cs" />
     <Compile Include="ContactTests.cs" />
     <Compile Include="ContextTest.cs" />
