--- a/Main/Source/Shared/BBC.Dna.Api/BBC.Dna.Api.csproj
+++ b/Main/Source/Shared/BBC.Dna.Api/BBC.Dna.Api.csproj
@@ -55,6 +55,10 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BBC.Dna.SocialAPI, Version=1.0.0.0, Culture=neutral, PublicKeyToken=c2c5f2d0ba0d9887, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\BBC.Dna.SocialAPI\bin\Debug\BBC.Dna.SocialAPI.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Caching, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Reference DLLs\EnterpriseLibrary\Microsoft.Practices.EnterpriseLibrary.Caching.dll</HintPath>
@@ -156,6 +160,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="BBC.Dna.snk" />
+    <Compile Include="Contracts\CommentforumActivity.Contract.cs" />
+    <Compile Include="Contracts\CommentForumsActivityList.Contract.cs" />
     <Compile Include="Contracts\ConversationStatus.Contracts.cs" />
     <Compile Include="Contracts\NeroRatingInfo.cs" />
     <Compile Include="Repositories\ICommentForumRepository.cs" />
@@ -183,10 +189,6 @@
     <ProjectReference Include="..\BBC.Dna.Sites\BBC.Dna.Sites.csproj">
       <Project>{2CE05465-9B21-4CD9-A592-FABD2AD051B3}</Project>
       <Name>BBC.Dna.Sites %28Source\Shared\BBC.Dna.Sites\BBC.Dna.Sites%29</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\BBC.Dna.SocialAPI\BBC.Dna.SocialAPI.csproj">
-      <Project>{BD150CEF-5F42-4C4D-AA7D-C7760977DD4D}</Project>
-      <Name>BBC.Dna.SocialAPI %28Source\Shared\BBC.Dna.SocialAPI\BBC.Dna.SocialAPI%29</Name>
     </ProjectReference>
     <ProjectReference Include="..\BBC.Dna.Users\BBC.Dna.Users.csproj">
       <Project>{19609A9E-E93A-4106-8529-F3A6C7DE9BF7}</Project>
