--- a/Main/Source/Shared/BBC.Dna.Api.Tests/BBC.Dna.Api.Tests.csproj
+++ b/Main/Source/Shared/BBC.Dna.Api.Tests/BBC.Dna.Api.Tests.csproj
@@ -74,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommentForumActivityTests.cs" />
+    <Compile Include="CommentForumRatingActivityTests.cs" />
     <Compile Include="CommentInfoTest.cs" />
     <Compile Include="ContactTests.cs" />
     <Compile Include="ContextTest.cs" />
