Completed logic and tests for MYMODCOMM-1014

--- a/Main/Source/Shared/BBC.Dna.SocialAPI.Tests/App.config
+++ b/Main/Source/Shared/BBC.Dna.SocialAPI.Tests/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="proxyserver" value="http://www-cache.reith.bbc.co.uk:80"/>
+    <add key="proxyserver" value=""/>
     <add key="TwitterUserName" value="BBC_DNA_Search" />
     <add key="TwitterPassword" value="WelCome12" />
   </appSettings>
