--- a/Main/Tests/FunctionalTests.Services.Comments/App.config
+++ b/Main/Tests/FunctionalTests.Services.Comments/App.config
@@ -43,7 +43,7 @@
     <!-- Path to log file directory -->
     <add key="logfilepath" value="d:\temp\InputLogs" />
     <!-- Proxy server to use -->
-    <add key="proxyserver" value="http://www-cache.reith.bbc.co.uk:80" />
+    <add key="proxyserver" value="" />
     <!-- If 1 then display .net errors - otherwise friendly error message will be sent -->
     <add key="aspneterrors" value="1" />
     <!-- Maximum number of ASPX concurrent requests -->
