--- a/Main/Source/Windows Services/DnaEventsService/SnesActivityProcessor.Tests/SnesActivityProcessorTests.csproj
+++ b/Main/Source/Windows Services/DnaEventsService/SnesActivityProcessor.Tests/SnesActivityProcessorTests.csproj
@@ -58,7 +58,7 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>BBC.Dna.snk</AssemblyOriginatorKeyFile>
