MYMODCOMM-1081 Update callback response in DNAEventProcessor to include failed external link reason code

--- a/Main/Source/Windows Services/DnaEventsService/CodeExperiments/CodeExperiments.csproj
+++ b/Main/Source/Windows Services/DnaEventsService/CodeExperiments/CodeExperiments.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <Compile Include="IDnaDataReaderAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThreadedProcessTests.cs" />
     <Compile Include="UnitTest1.cs" />
   </ItemGroup>
   <ItemGroup>
