Fixed tests by ensuring BOM was not getting prepended to encoded XML value

--- a/Main/Source/BBC.Dna/BBC.DNA.csproj
+++ b/Main/Source/BBC.Dna/BBC.DNA.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BBC.Dna</RootNamespace>
     <AssemblyName>BBC.Dna</AssemblyName>
-    <SignAssembly>false</SignAssembly>
+    <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>BBC.Dna.snk</AssemblyOriginatorKeyFile>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
