--- a/Main/Source/Shared/BBC.DNA.Moderation.Utils/BBC.DNA.Moderation.Utils.csproj
+++ b/Main/Source/Shared/BBC.DNA.Moderation.Utils/BBC.DNA.Moderation.Utils.csproj
@@ -12,7 +12,7 @@
     <AssemblyName>BBC.DNA.Moderation.Utils</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SignAssembly>false</SignAssembly>
+    <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>BBC.Dna.snk</AssemblyOriginatorKeyFile>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
