--- a/Main/Source/Shared/BBC.Dna.Utils/BBC.Dna.Utils.csproj
+++ b/Main/Source/Shared/BBC.Dna.Utils/BBC.Dna.Utils.csproj
@@ -16,7 +16,7 @@
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
-    <SignAssembly>false</SignAssembly>
+    <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>BBC.Dna.snk</AssemblyOriginatorKeyFile>
     <IsWebBootstrapper>true</IsWebBootstrapper>
     <FileUpgradeFlags>
