--- a/Main/Source/Windows Services/DnaEventsService/SiteEventProcessor/SiteEventProcessor.csproj
+++ b/Main/Source/Windows Services/DnaEventsService/SiteEventProcessor/SiteEventProcessor.csproj
@@ -38,7 +38,7 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>false</SignAssembly>
+    <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>BBC.Dna.snk</AssemblyOriginatorKeyFile>
