--- a/Main/packages/repositories.config
+++ b/Main/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Source\Shared\BBC.Dna.Moderation\packages.config" />
   <repository path="..\Tests\Acceptance Tests\Comments.AcceptanceTests\packages.config" />
 </repositories>
