Changed build action of the App_code folder to ensure files get deployed once pubish build is run

--- a/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
+++ b/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
@@ -389,7 +389,7 @@
     <Compile Include="NewUsers.aspx.designer.cs">
       <DependentUpon>NewUsers.aspx</DependentUpon>
     </Compile>
-    <None Include="App_Code\ActionlessForm.cs" />
+    <Compile Include="App_Code\ActionlessForm.cs" />
     <Compile Include="ArticleDiagnosticPage.aspx.cs">
       <DependentUpon>ArticleDiagnosticPage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
