Fixes for MYMODCOMM-1158
Added slow cheetah to aid with appconfig transformations for tests.
Also fixed XSLTCachingTests.cs to read from the configuration file
instead of hard coded path.

--- a/Main/Tests/Legacy Tests/Tests/App.Config
+++ b/Main/Tests/Legacy Tests/Tests/App.Config
@@ -33,4 +33,7 @@
       <add encryptionProviderName="" type="Microsoft.Practices.EnterpriseLibrary.Caching.BackingStoreImplementations.NullBackingStore, Microsoft.Practices.EnterpriseLibrary.Caching, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d" name="Null Storage" />
     </backingStores>
   </cachingConfiguration>
+  <appSettings>
+    <add key="testXsltFilePath" value="D:\DnaXsltCacheTestFile.xsl"/>
+  </appSettings>
 </configuration>
