--- a/Main/packages/repositories.config
+++ b/Main/packages/repositories.config
@@ -2,4 +2,6 @@
 <repositories>
   <repository path="..\Source\Shared\BBC.Dna.Moderation\packages.config" />
   <repository path="..\Tests\Acceptance Tests\Comments.AcceptanceTests\packages.config" />
+  <repository path="..\Tests\FunctionalTests.DnaPages\packages.config" />
+  <repository path="..\Tests\Legacy Tests\Tests\packages.config" />
 </repositories>
