Applied configuration transformations to all app.configs to poke settings during test run build

--- a/Main/Tests/FunctionalTests.Services.Comments/App.Debug.config
+++ b/Main/Tests/FunctionalTests.Services.Comments/App.Debug.config
@@ -11,7 +11,10 @@
   </cachingConfiguration>
 
   <appSettings>
-    <add key="testXsltFilePath" value="\\ci-int-dub-2\wwwroot\dnasite\Skins\DnaXsltCacheTestFile.xsl" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="xslt_directory" value="http://ci.bbc.co.uk:8081/dna/api/comments/xslt/2.0" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="ServerBasePath" value="http://local.bbc.co.uk/dna/api/comments/CommentsService.svc" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="ServerList" value="10.4.3.6:11211" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="SecondaryMemcachedServer" value="10.4.3.6:11211" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
-  
+
 </configuration>
